<?xml version="1.0"?>
<package format="3">
  <name>hw_device_mgr</name>
  <version>0.2.0</version>
  <description>EtherCAT and other hardware device management</description>
  <maintainer email="john@dovetail-automata.com">John Morris</maintainer>
  <author email="john@zultron.com">John Morris</author>

  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend>hal_hw_interface</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>

  <!-- <build_export_depend>rclpy</build_export_depend> -->

  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <!-- For `ethercat_utils` -->
  <exec_depend>python3-ruamel.yaml</exec_depend>

  <exec_depend>python-fysom</exec_depend>
  <exec_depend>python3-lxml</exec_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_copyright</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_flake8</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_pep257</test_depend>
  <test_depend condition="$ROS_VERSION == 1">rostest</test_depend>
  <test_depend condition="$ROS_VERSION == 1">ros_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-pytest-mock</test_depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <!-- ROS2 uses setup.py directly (ROS1 uses `CMakeLists.txt`) -->
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
